fix header issue on small device

--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ body {
   } 
   .header {
     padding-bottom: 25px;
-    font-size: 1.3em;
+    font-size: 1.1em;
   }
   main {
      display: flex;
